# SubReader

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
apple_app/: Package.swift
apple_app/Scripts/: build-rust.sh  ci-build.sh
apple_app/SubReader/: Info.plist
apple_app/SubReader/Sources/App/: AppCommands.swift  AppState.swift  ContentView.swift  SidebarView.swift  SubReaderApp.swift
apple_app/SubReader/Sources/Bridge/: AuthService.swift  DIContainer.swift  MockReaderEngine.swift  ReaderEngineProtocol.swift  ReaderError.swift  RustCore.swift  SyncService.swift
apple_app/SubReader/Sources/Models/: ReaderModels.swift
apple_app/SubReader/Sources/Resources/en.lproj/: Localizable.strings
apple_app/SubReader/Sources/Resources/zh-Hans.lproj/: Localizable.strings
apple_app/SubReader/Sources/Theme/: ReadingPreferences.swift  ReadingTheme.swift
apple_app/SubReader/Sources/Utilities/: LanguageManager.swift  String+Localized.swift  TxtContentStore.swift
apple_app/SubReader/Sources/Views/Reader/: AnnotationListView.swift  AnnotationManager.swift  AttributedTextView.swift  BookmarkListView.swift  BookmarkManager.swift  DomRenderer.swift  DualPageTextView.swift  PageLayoutManager.swift  PageRenderView.swift  PaginatedReaderView.swift  PaginationEngine.swift  ReaderToolbarOverlay.swift  ReaderView.swift  TOCSidebarView.swift  TxtReaderView.swift
apple_app/SubReader/Sources/Views/Settings/: AccountView.swift  SettingsView.swift
apple_app/SubReader/Tests/AppTests/: AppTests.swift
apple_app/SubReader/Tests/BridgeTests/: BridgeTests.swift
apple_app/SubReader/Tests/ModelTests/: ModelTests.swift
apple_app/SubReader/Tests/PerformanceTests/: PerformanceTests.swift
crates/backend/: Cargo.toml  openapi.yaml
crates/backend/src/: config.rs  db.rs  error.rs  jwt.rs  main.rs  middleware.rs
crates/backend/src/handlers/: auth.rs  files.rs  health.rs  mod.rs  sync.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core_auth/: Cargo.toml
crates/core_auth/src/: http_auth.rs  lib.rs  token_store.rs
crates/core_network/: Cargo.toml
crates/core_network/src/: http_transport.rs  lib.rs
crates/core_parser/: Cargo.toml
crates/core_parser/src/: epub.rs  error.rs  lib.rs  txt.rs
crates/core_state/: Cargo.toml
crates/core_state/src/: lib.rs
crates/core_storage/: Cargo.toml
crates/core_storage/src/: db.rs  error.rs  lib.rs  migrations.rs
crates/core_sync/: Cargo.toml
crates/core_sync/src/: engine.rs  file_sync.rs  lib.rs  scheduler.rs
crates/ffi_c/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi_c/src/: lib.rs
crates/ffi_wasm/: Cargo.toml
crates/ffi_wasm/src/: lib.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/: e2e.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
scripts/: build_android.sh  build_ios.sh  build_wasm.sh
tests/: test_backend.py
