[package]
name = "reader-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reader-backend"
path = "src/main.rs"

[dependencies]
shared_types = { workspace = true }
core_sync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true }
