[package]
name = "core_network"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { workspace = true }
core_sync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
