[package]
name = "core_parser"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }
chardetng = { workspace = true }
encoding_rs = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
