[package]
name = "core_storage"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { workspace = true }
core_sync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
