[package]
name = "core_sync"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
