[package]
name = "ffi_c"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
shared_types = { workspace = true }
core_parser = { workspace = true }
core_state = { workspace = true }
core_storage = { workspace = true }
core_sync = { workspace = true }
core_auth = { workspace = true }
core_network = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
tempfile = "3.10"
